# gpc_smillar_demo

./: .gitattributes  .gitmodules  Dockerfile  README.md  download_model.py  main.py  makefile  pyproject.toml
gpc_demo/: gpc_demo.py  gpc_summarize_demo.py  gpc_summarize_demo_with_tree_v1.py  setting.py  utils.py
lab/: .env_example  experiment.ipynb  main-api.py  preparation.ipynb  preparation_v1.ipynb  test.py  work_v20240816.py
