[tool.poetry]
name = "gpc-demo"
version = "0.1.0"
description = ""
authors = ["ider <ider@knogen.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


streamlit = "^1.36.0"
pandas = "^2.2.2"
numpy = "^2.0.0"
neo4j = "^5.22.0"
elasticsearch = "^8.14.0"
streamlit-searchbox = "^0.1.17"
tqdm = "^4.66.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
scipy = "^1.14.1"
st-annotated-text = "^4.0.1"
redis = "^5.1.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
openpyxl = "^3.1.5"
networkx = "^3.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"
